# SWEIDMT_SS2023_MATTHIAS_MEES

./: 12bit_short.raw  8bit.raw  CMakeLists.txt  Doxyfile  README.md  aufgabe2_1.cpp  aufgabe2_1.h  aufgabe2_1.ui  main.cpp
MyLib/: CMakeLists.txt  ctdataset.cpp  ctdataset.h
MyLibUnitTests/: CMakeLists.txt  tst_mylibunittest.cpp
doc/html/: annotated.html  aufgabe2__1_8h_source.html  class_aufgabe2__1-members.html  class_aufgabe2__1.html  class_c_t_dataset-members.html  class_c_t_dataset.html  class_my_lib_test_class-members.html  class_my_lib_test_class.html  classes.html  ctdataset_8h_source.html  dir_9ddf9e93c4f4d1ffed0cd5a7135a9783.html  dir_eb9f46c45142d138281eeea982d0d358.html  files.html  functions.html  functions_func.html  functions_vars.html  hierarchy.html  index.html
doc/html/search/: all_0.js  all_1.js  all_3.js  all_4.js  all_5.js  all_6.js  all_8.js  classes_2.js  functions_0.js  functions_1.js  functions_2.js  functions_5.js  searchdata.js  variables_0.js
docs/: CMakeLists.txt  Doxyfile.in
